--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -477,3 +477,27 @@ body {
 	font-size: 1.3em;
 }
 /*////////// End Home //////////*/
+
+/* Start FORM    */
+.addProduct{
+  color: white;
+}
+.NombreF{
+  color: black;
+}
+.DescriptionF{
+  color: black;
+}
+.RatingF{
+  color: black;
+}
+.MaterialF{
+  color: black;
+}
+.MaterialF1{
+  color:white;
+}
+.ButtonF{
+  color: black;
+}
+/*////////  END FORM ///////////*/
