--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -96,27 +96,12 @@ body {
   overflow-x: hidden;
 }
 
-/* body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-} */
-
-/* a {
-  color: inherit;
-  text-decoration: none;
-} */
-
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
 }
-/**/
+
 .container0{
   display: flex;
   padding-top: 200px;
@@ -187,6 +172,9 @@ body {
   align-content: space-around;
   gap: 40px 10px;
 }
+
+
+/* Version anterior de Cards
 .card {
   display: block;
   border-radius: 10px;
@@ -198,18 +186,17 @@ body {
   border: 2px solid transparent;
   overflow: hidden;
 
-    }
-    .card:hover {
-      transition: all 0.1s ease-out;
-      box-shadow: 4px 4px 8px rgba(38, 38, 38, 0.2);
-      top: 4px;
-      border: 2px solid #cccccc;
-      /* background-image: radial-gradient(circle farthest-corner at center, rgba(36, 160, 237, 1) 10%, rgba(0, 134, 208, 1) 20%, rgba(0, 109, 181, 1) 30%, rgba(0, 85, 154, 1) 40%, rgba(0, 62, 127, 1) 50%, rgba(0, 41, 102, 1) 60%, rgba(0, 21, 77, 1) 70%, rgba(0, 5, 54, 1) 80%, rgba(0, 2, 31, 1) 90%, rgba(0, 0, 3, 1) 100%); */
-      /* background-image: radial-gradient(circle farthest-corner at center, rgba(255, 255, 0, 1) 10%, rgba(255, 255, 0, 1) 20%, rgba(255, 255, 0, 1) 30%, rgba(100, 180, 0, 1) 40%, rgba(140, 180, 0, 1) 50%, rgba(0, 41, 102, 1) 60%, rgba(0, 21, 77, 1) 70%, rgba(0, 5, 54, 1) 80%, rgba(0, 2, 31, 1) 90%, rgb(189, 228, 12) 100%); */
-      background-image: radial-gradient(closest-corner at 50% 50%, white, yellow, white);
-      background-color: rgba(250, 255, 100, 0.995); 
-      /* background-color: yellow;  */
-          }
+} 
+
+.card:hover {
+  transition: all 0.1s ease-out;
+  box-shadow: 4px 4px 8px rgba(38, 38, 38, 0.2);
+  top: 4px;
+  border: 2px solid #cccccc;
+  
+  background-image: radial-gradient(closest-corner at 50% 50%, white, yellow, white);
+  background-color: rgba(250, 255, 100, 0.995); 
+} */
          
 .cardTitle{
   text-align: center;
@@ -697,7 +684,7 @@ header{
 .card{
 	position:relative;
 	height: 300px;
-	max-width: 300px;
+	width: 300px;
 	margin: 30px;
 	overflow: hidden;
 	display: block;
@@ -709,11 +696,12 @@ header{
 
 .card img{
   height: 100%;
-object-fit: fill;
+  width: 100%;
+  object-fit: cover;
 }
 .card_text{
 height: 200px;
-width: 300px;
+width: 100%;
 padding:  18px;
 background-color: #1119;
 box-sizing: border-box;
