agregando ordenamientos sin estilo

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -676,7 +676,15 @@ header{
 }
 
 /* Selects */
+.order-container{
+ color:transparent;
+ padding-right: 15%;
+ padding-left: 35%;
+}
+.react-select-order{
+  box-shadow: 5px 5px 20px #1116;
 
+}
 .react-Container-reset{
   padding-right: 36%;
 }
@@ -699,6 +707,8 @@ header{
   margin: 30px auto;
   border: none;
 	width: 25%;
+  
+  
 }
 
 .react-select__control{
