Estilos corregidos de los filtros y el boton reset

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -677,30 +677,50 @@ header{
 
 /* Selects */
 
-.react-Container-reset{
-  padding-right: 36%;
+.btn-reset{
+  margin: 0 auto 90px auto;
+  width: 100px;
+
+  /* SOLUCION TEMPORAL */
+  position:absolute;
+  right: 21%;
+  top: 390px;
 }
-.react-Container-reset2{
-  padding-right: 10%;
+.btn-reset button{
+  cursor: pointer;
+  border: none;
+  border-radius: 10px;
+  padding: 10px 20px;
+  font-weight: 700;
+  font-size: 1.2em;
+  background-color: var(--main-color);
+  color: var(--text-color);
+}
+.btn-reset button:hover{
+  background-color: var(--text-color);
+  color: var(--main-color);
+}
+
+.selects-container{
+  justify-content: space-around;
+  display: flex;
+  margin-bottom: 100px;
 }
 .react-select-reset{
   font-size: 20px;
   display:flex;
   float:right;
-  background-color:  #F6C90E;
+  background-color:var(--main-color);
   width: 10%;
   padding: 6px;
-  border-radius: 5%;
+  border-radius: 10px;
   
 }
 .react-select-container{
 	justify-content: center;
 	box-shadow: 5px 5px 20px #1116;
-  margin: 30px auto;
   border: none;
 	width: 25%;
-  
-  
 }
 
 .react-select__control{
@@ -709,7 +729,9 @@ header{
 }
 
 .react-select__indicator{
+  cursor: pointer;
   background-color: var(--main-color);
+  border-radius: 5px;
 }
 
 .react-select__menu{
@@ -725,9 +747,8 @@ header{
 }
 
 .select{
-    display: flex;
-	border-radius: 5px;
-    background-color: var(--text-color);
+  display: flex;
+  min-width: 500px;
 	margin: 50px 50px ;
 	justify-content: center;
 	padding: 10px;
