--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1039,3 +1039,78 @@ border-color: var(--main-color);
   margin: 8px 0;
 }
 /*////////// End CreateP //////////*/
+
+
+/*////////// Start Panel Admin //////////*/
+
+/* Secion Superior */
+.dashboard-container{
+  margin-top: 130px;
+  display: flex;
+  flex-direction: column;
+}
+
+.dashboard-container_stats{
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.stats-total{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 400px;
+  height: 200px;
+  border-radius: 20px;
+  margin-bottom: 80px;
+  box-shadow: 0 5px 25px -10px #111;
+}
+
+.stats-total_text h3{
+  color: var(--main-color);
+  font-size: 3em;
+}
+
+.stats-total_icon{
+  width: 160px;
+  height: 160px;
+}
+.stats-total_icon img{
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+
+/* Secion Inferior */
+
+.stats-recent{
+  width: 100%;
+  justify-content: center;
+}
+
+.stats-recent_text{
+  display: flex;
+  justify-content: left;
+  margin-bottom: 20px;
+}
+.stats-recent_text h3{
+  width: 50%;
+  padding: 20px 0 0 20px;
+}
+
+.stats-recent_text .btn-container{
+  margin: 0;
+  justify-content: right;
+}
+
+
+.stats-recent_list{
+  display: flex;
+}
+
+.stats-recent_list-item{
+  padding-left: 20px;
+  width: 33%;
+}
+
+/*////////// End Panel Admin //////////*/
