--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1048,11 +1048,13 @@ border-color: var(--main-color);
   margin-top: 130px;
   display: flex;
   flex-direction: column;
+  padding: 0 30px;
 }
 
 .dashboard-container_stats{
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
+  margin-bottom: 50px
 }
 
 .stats-total{
@@ -1062,7 +1064,6 @@ border-color: var(--main-color);
   width: 400px;
   height: 200px;
   border-radius: 20px;
-  margin-bottom: 80px;
   box-shadow: 0 5px 25px -10px #111;
 }
 
@@ -1084,33 +1085,101 @@ border-color: var(--main-color);
 /* Secion Inferior */
 
 .stats-recent{
-  width: 100%;
+  width: 48%;
+  box-shadow: 0 5px 35px -10px #111;
+  border-radius: 20px;
+  padding: 10px 0;
   justify-content: center;
 }
 
 .stats-recent_text{
   display: flex;
   justify-content: left;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 .stats-recent_text h3{
   width: 50%;
   padding: 20px 0 0 20px;
+  color: var(--main-color);
+  font-size: 1.2em;
+  font-weight: 700;
 }
 
 .stats-recent_text .btn-container{
-  margin: 0;
+  margin: 10px 20px 0 0;
   justify-content: right;
+}
+.stats-recent_text .btn-container .btn{
+  width: 100px;
 }
 
 
 .stats-recent_list{
   display: flex;
+  position: relative;
+  padding: 10px 0;
+  border-bottom: 2px solid #adadad55;
+  margin: 0 20px;
+}
+.title{
+  border: none;
+}
+.title .stats-recent_list-item span{
+  color: var(--main-color);
+  font-weight: 700;
 }
 
+
 .stats-recent_list-item{
-  padding-left: 20px;
+  padding-left: 5px;
+  text-align: right;
   width: 33%;
+}
+.text-left{
+  text-align: left;
+}
+
+/* Drop Down */
+.dropdown{
+  position: absolute;
+  left: 100%;
+  border-radius: 10px;
+  overflow: hidden;
+  min-width: 150px;
+  background-color: var(--dark-color);
+  justify-content: center;
+  box-shadow: 0 5px 35px -10px #111;
+}
+.dropdown-icon{
+  width: 10%;
+  padding: 0 7px;
+  cursor: pointer;
+}
+.dropdown-icon img{
+}
+
+.dropdown-option{
+  cursor: pointer;
+  padding: 8px 8px;
+  display: block;
+  text-align: center;
+  background-color: var(--dark-color);
+  width: 200px;
+  transition: background .3s;
+}
+.dropdown-option:hover{
+  background-color: var(--main-color);
+}
+
+.desactive{
+  display: none;
+}
+
+/* Not Found Text */
+.notFound-text{
+  color: #adadad55;
+  margin: 40px 0;
+  text-align: center;
 }
 
 /*////////// End Panel Admin //////////*/
