--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -790,7 +790,7 @@ header{
 	border: none;
 	font-size: 15px;
 	box-shadow: 5px 5px 20px #1116;
-	-webkit-appearance: button;
+	
 	outline: none;
 	cursor: pointer;
 }
@@ -1171,6 +1171,7 @@ border-color: var(--main-color);
   cursor: pointer;
 }
 .dropdown-icon img{
+  cursor: pointer;
 }
 
 .dropdown-option{
