--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1100,6 +1100,9 @@ border-color: var(--main-color);
 /* Secion Inferior */
 
 .stats-recent{
+  display: block;
+  /* grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr; */
   width: 48%;
   box-shadow: 0 5px 35px -10px #111;
   border-radius: 20px;
@@ -1157,10 +1160,11 @@ border-color: var(--main-color);
 /* Drop Down */
 .dropdown{
   position: absolute;
-  left: 100%;
+  right: 0%;
   border-radius: 10px;
   overflow: hidden;
   min-width: 150px;
+  z-index: 10;
   background-color: var(--dark-color);
   justify-content: center;
   box-shadow: 0 5px 35px -10px #111;
@@ -1171,6 +1175,8 @@ border-color: var(--main-color);
   cursor: pointer;
 }
 .dropdown-icon img{
+  width: 100px;
+  height: 100%;
 }
 
 .dropdown-option{
