--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -552,6 +552,9 @@ header{
 }
 
 .nav-icons_logIn{
+  margin:0 30px;
+  display: flex;
+  justify-content: center;
   font-size: 20px;
 	font-weight: 500;
   max-width: 50px;
@@ -565,8 +568,13 @@ header{
 }
 
 .nav-icons .btn-logIn{
-  width: 100%;
-  height: 100%;
+  width: 50px;
+  height: 50px;
+  object-fit: cover;
+}
+.nav-icons h6{
+  bottom: 0;
+  /* position: absolute; */
 }
 
 /*////////// End NavBar //////////*/
