--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -105,7 +105,15 @@ body {
     color-scheme: dark;
   }
 }
-
+/*Imagenes Materiales*/
+.pla2{
+  width: 250px;
+  height: auto;
+}
+.pla1{
+  width: 250px;
+  height: auto;
+}
 .container0 {
   display: flex;
   padding-top: 200px;
