Estilos de reseñas y nobre de usuario en el nav bar solucionado

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -610,7 +610,8 @@ header {
 }
 .nav-icons h6 {
   bottom: 0;
-  /* position: absolute; */
+  text-align: center;
+  min-width: 200px;
 }
 
 /*////////// End NavBar //////////*/
@@ -698,6 +699,10 @@ header {
   font-size: 20px;
 }
 
+.data-descripcion{
+  padding: 0 80px;
+  margin-bottom: 100px;
+}
 .diets-container {
   display: flex;
 }
