Estilos agregados a botones de paginacion

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1129,6 +1129,10 @@ header {
   background-color: var(--main-color);
   color: var(--dark-color);
 }
+.btn-paginated .btn-on{
+  background-color: var(--main-color);
+  color: var(--dark-color);
+}
 .btn-paginated .btn:hover img {
   filter: brightness(0);
 }
