--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1391,6 +1391,23 @@ header {
   font-size: 3em;
 }
 
+.search-container{
+  margin: 40px 20px 10px 20px;
+  display: flex;
+  justify-content: center;
+}
+.search-container input{
+  outline: none;
+  border: none;
+  padding: 10px 18px;
+  border-radius: 30px;
+  width: 70%;
+  font-size: .98em;
+  background-color: var(--dark-color);
+  color: var(--main-color);
+  box-shadow: 0 5px 35px -10px #111;
+}
+
 .stats-total_icon {
   width: 160px;
   height: 160px;
@@ -1417,6 +1434,7 @@ header {
 .stats-recent_text {
   display: flex;
   justify-content: left;
+  min-height: 58px;
   margin-bottom: 10px;
 }
 .stats-recent_text h3 {
