--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -99,16 +99,17 @@ body {
   max-width: 100vw;
   height: 100%;
 }
+#__next{
+  position: absolute;
+}
 
 body::-webkit-scrollbar{
   background-color: transparent;
-  z-index: 250;
 }
 
 body::-webkit-scrollbar-thumb{
   background-color: var(--text-color);
   border-radius: 30px;
-  width: 50%;
 }
 
 /* @media (prefers-color-scheme: dark) {
@@ -638,10 +639,6 @@ header {
 
 /*// Responsive NavBar //*/
 @media (max-width: 800px){
-  header{
-    /* background-color: #f00; */
-  }
-
   .nav{
     padding: 25px 0;
   }
@@ -657,7 +654,7 @@ header {
     align-items: center;
     right: 0;
     border-radius: 0 0 0 30px;
-    width: 50%;
+    width: 75%;
     padding: 40px 40px 20px 20px;
     overflow: hidden;
     /* opacity: 0; */
@@ -1738,6 +1735,17 @@ footer .footer-data{
   bottom: 0;
   width: 100%;
   padding: 8px;
+}
+
+@media (max-width: 800px){
+  footer{
+    flex-direction: column;
+    align-items: center;
+  }
+  footer .footer-data{
+    width: 90%;
+    margin-bottom: 30px;
+  }
 }
 /*////////// End Footer //////////*/
 
