--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -44,6 +44,9 @@
   --card-rgb: 180, 185, 188;
   --card-border-rgb: 131, 134, 135;
 }
+.compras {
+  margin-top: 80px;
+}
 
 /* @media (prefers-color-scheme: dark) {
   :root {
