--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1215,7 +1215,7 @@ header {
 }
 .buttonForm{
 border-radius: 5px;
-border: 1px solid #39c;
+border: 3px solid #f6c90e;
 }
 .form-img_btn{
   padding-top: 20px;
